# fizzbotz

./: .editorconfig  .gitignore  .isort.cfg  LICENSE  Makefile  main.py  pylava.ini  pyproject.toml
fizzbotz/: __init__.py  core.py  environments.py  log.py  utils.py
fizzbotz/cogs/: admin.py  avatar.py  eightball.py  extensions.py  images.py  imgur.py  word.py
