[tool.poetry]
name = "fizzbotz"
version = "0.1.0"
description = "A Discord bot written by Fission#1337"
authors = ["Fission"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.6"
aiofiles = "^0.4.0"
aiohttp = "^3.5.4"
"discord.py" = "^1.0.1"
pynacl = "^1.3.0"
python-dotenv = "^0.9.1"
uvloop = {version = "^0.11.2", platform = "*nix"}

[tool.poetry.dev-dependencies]
black = '*'
isort = "^4.3"
pylava = "^0.2.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
